--- a/index.html
+++ b/index.html
@@ -4,5 +4,14 @@
     <title>My Portfolio</title>
     <p>Jacket Zheng Chen</p>
     <p>jacket.zhengchen03@bcmail.cuny.edu</p>
+
+    <p>
+      Sceneproject:
+      <a
+        href="https://github.com/Vcz-Jz/Vcz-Jz.github.io/Scene Project/"
+        target="_blank"
+        >Canvas Scene Project</a
+      >
+    </p>
   </head>
 </html>
