--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <p>Jacket Zheng Chen</p>
     <p>jacket.zhengchen03@bcmail.cuny.edu</p>
 
-    <p>
-      Sceneproject:
-      <a
-        href="https://github.com/Vcz-Jz/Vcz-Jz.github.io/Scene Project/"
-        target="_blank"
-        >Canvas Scene Project</a
-      >
-    </p>
+    <li><a href="Scene_Project/index.html">Scene Project</a></li>
   </head>
 </html>
