--- a/Scene_Project/index.html
+++ b/Scene_Project/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scene Assignment</title>
+    <title>Scene Project</title>
   </head>
   <body>
-    <canvas id="sceneCanvas" width="800" height="600"></canvas>
+    <canvas id="scene Canvas" width="800" height="600"></canvas>
     <script src="script.js"></script>
   </body>
 </html>
