--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>My Portfolio</title>
     <p>Jacket Zheng Chen</p>
     <p>jacket.zhengchen03@bcmail.cuny.edu</p>
-
-    <li><a href="Scene_Project/index.html">Scene Project</a></li>
   </head>
+  <body>
+    <ul>
+      <li><a href="project_1/index.html">Scene Project</a></li>
+    </ul>
+  </body>
 </html>
