--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <ul>
       <li><a href="project_1/index.html">Scene Project</a></li>
+      <li><a href="project_2/index.html">Temperature Converter Project</a></li>
     </ul>
   </body>
 </html>
