--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="project_1/index.html">Scene Project</a></li>
       <li><a href="project_2/index.html">Temperature Converter Project</a></li>
+      <li><a href="project_3/index.html">Interactive Canvas Project</a></li>
     </ul>
   </body>
 </html>
