--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="project_2/index.html">Temperature Converter Project</a></li>
       <li><a href="project_3/index.html">Interactive Canvas Project</a></li>
       <li><a href="project_4/index.html">Data Visualiztion Project</a></li>
+      <li><a href="project_5/index.html">Animation Project</a></li>
     </ul>
   </body>
 </html>
