--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="project_3/index.html">Interactive Canvas Project</a></li>
       <li><a href="project_4/index.html">Data Visualiztion Project</a></li>
       <li><a href="project_5/index.html">Animation Project</a></li>
+      <li><a href="project_6/index.html">Bootstrap Resume</a></li>
       <li><a href="PWA/index.html">PWA Project</a></li>
     </ul>
   </body>
